Bug 440970 - Can't save the image
Summary: Can't save the image
Status: RESOLVED FIXED
Alias: None
Product: Skanlite
Classification: Applications
Component: general (other bugs)
Version First Reported In: 21.08.0
Platform: Neon Linux
: NOR critical
Target Milestone: ---
Assignee: Kåre Särs
URL:
Keywords:
: 441890 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-08-14 14:38 UTC by pablodebella
Modified: 2021-09-03 17:30 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
the image could not be saved (13.63 KB, image/png)
2021-08-14 14:38 UTC, pablodebella
Details

Note You need to log in before you can comment on or make changes to this bug.
Description pablodebella 2021-08-14 14:38:05 UTC
Created attachment 140716 [details]
the image could not be saved

SUMMARY


STEPS TO REPRODUCE
1. 
2. 
3. 

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.22.4
KDE Frameworks Version: 5.84.0
Qt Version: 5.15.3

ADDITIONAL INFORMATION
when I click save, the attached image appears. It does not close, it stays waiting without being able to do anything else.
Comment 1 Alexander Stippich 2021-08-17 17:29:56 UTC
That's odd.
I assume that you recently updated libksane and Skanlite to the 21.08 release?
Which format are trying to save to? Is it 8 bit or 16 bit?
Comment 2 pablodebella 2021-08-17 17:59:19 UTC
I tried different formats. I went back to the default settings and that window reappeared when saving.
I don't think I have libskane installed.
I downloaded version 2.2.0-1 and have been able to scan again, I use it to work, it's an excellent software.
Comment 3 Alexander Stippich 2021-08-17 18:10:32 UTC
The scanned image is shown correctly in Skanlite?
Comment 4 Alexander Stippich 2021-08-17 18:12:45 UTC
Ah, I think I can reproduce. You have the option "Preview before saving" disabled?
Comment 5 pablodebella 2021-08-17 18:25:42 UTC
(In reply to Alexander Stippich from comment #4)
> Ah, I think I can reproduce. You have the option "Preview before saving"
> disabled?

Yes, I have that option disabled.
I tried all the ways.
I should reinstall the latest version for more testing to do, but I think I tried everything.
Comment 6 Bug Janitor Service 2021-08-17 18:32:30 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/skanlite/-/merge_requests/12
Comment 7 Alexander Stippich 2021-08-19 17:08:22 UTC
Git commit 9e9f49f8688e34ecd04677ffa7cf6133dee94ee3 by Alexander Stippich.
Committed on 17/08/2021 at 18:31.
Pushed by astippich into branch 'master'.

fix image saving when preview is not shown

by always saving the data to the image.

M  +2    -3    src/skanlite.cpp

https://invent.kde.org/graphics/skanlite/commit/9e9f49f8688e34ecd04677ffa7cf6133dee94ee3
Comment 8 Alexander Stippich 2021-08-19 17:09:13 UTC
Git commit a8034a8dc2de3a0987ebf7fa57c21704e30e42e9 by Alexander Stippich.
Committed on 19/08/2021 at 17:08.
Pushed by astippich into branch 'release/21.08'.

fix image saving when preview is not shown

by always saving the data to the image.

M  +2    -3    src/skanlite.cpp

https://invent.kde.org/graphics/skanlite/commit/a8034a8dc2de3a0987ebf7fa57c21704e30e42e9
Comment 9 Alexander Stippich 2021-09-03 17:30:24 UTC
*** Bug 441890 has been marked as a duplicate of this bug. ***