fix image saving when preview is not shown

by always saving the data to the image.

BUG: 440970